improvments on styles

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
         <article class="column one-third">
           <h3>Article 1</h3>
-          <img src="" alt="" />
+          <img src="images/surfer.jpg" alt="Picture of a surfer" />
           <p>
             Trust fund chartreuse cliche church-key typewriter, bitters quinoa brooklyn before they sold out messenger bag fingerstache. Post-ironic cornhole four loko echo park migas vice. Irony freegan truffaut, chambray butcher VHS vegan fixie. 8-bit scenester sustainable, bushwick listicle messenger bag selfies neutra mlkshk pitchfork roof party next level sartorial.
           </p>
@@ -50,7 +50,7 @@
         </article>
         <article class="column one-third">
           <h3>Article 2</h3>
-          <img src="" alt="" />
+          <img src="images/rocks.jpg" alt="Picture of waves hitting rocks" />
           <p>
             Trust fund chartreuse cliche church-key typewriter, bitters quinoa brooklyn before they sold out messenger bag fingerstache. Post-ironic cornhole four loko echo park migas vice. Irony freegan truffaut, chambray butcher VHS vegan fixie. 8-bit scenester sustainable, bushwick listicle messenger bag selfies neutra mlkshk pitchfork roof party next level sartorial.
           </p>
@@ -58,7 +58,7 @@
         </article>
         <article class="column one-third last-of-type">
           <h3>Article 3</h3>
-          <img src="" alt="" />
+          <img src="images/water.jpg" alt="Picture of a scuba diver underwater" />
           <p>
             Trust fund chartreuse cliche church-key typewriter, bitters quinoa brooklyn before they sold out messenger bag fingerstache. Post-ironic cornhole four loko echo park migas vice. Irony freegan truffaut, chambray butcher VHS vegan fixie. 8-bit scenester sustainable, bushwick listicle messenger bag selfies neutra mlkshk pitchfork roof party next level sartorial.
           </p>
